Fixed about section layout on mobile

--- a/assets/sass/abstracts/variables/_layout.scss
+++ b/assets/sass/abstracts/variables/_layout.scss
@@ -1,2 +1,2 @@
-$mobile-header-height: 90px;
+$mobile-header-height: 100px;
 $header-height: 60px;
