--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -4,14 +4,14 @@
 .header {
   position: absolute;
   width: 100%;
-  height: $mobile-header-height;
+  min-height: $mobile-header-height;
   padding: 0.5em 0;
   background-color: $white;
   z-index: 99;
   transition: transform $about-opening-transition-duration;
 
   @include media('>=small') {
-    height: $header-height;
+    min-height: $header-height;
   }
 }
 
